# random123

./: CMakeLists.txt  README.md  readme.md
app/: philox.cpp  philox32.cpp
